// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PluginListItem should render 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="sc-AxgMl fRZhDw group"
        data-testid="TableRow"
      >
        <td
          class="w-20"
        >
          <div
            class="sc-AxhUy ietzKN"
          >
            <svg
              class="w-15 h-15"
            >
              changenow-logo.svg
            </svg>
          </div>
        </td>
        <td>
          <div
            class="sc-AxhUy ekyfZv space-x-2"
          >
            <a
              class="font-semibold link"
              href="/"
            >
              ARK Explorer
            </a>
          </div>
        </td>
        <td>
          <div
            class="sc-AxhUy ekyfZv pr-16"
          >
            <span>
              ARK.io
            </span>
          </div>
        </td>
        <td>
          <div
            class="sc-AxhUy ekyfZv"
          >
            <span>
              Utility
            </span>
          </div>
        </td>
        <td>
          <div
            class="sc-AxhUy ekyfZv"
          >
            <div
              class="flex"
              data-testid="ReviewRating"
            >
              <div
                class="relative my-auto"
              >
                <div
                  class="absolute overflow-hidden"
                  style="width: 80%;"
                >
                  <svg
                    class="text-theme-warning-400 w-3"
                  >
                    star.svg
                  </svg>
                </div>
                <svg
                  class="text-theme-neutral w-3"
                >
                  star.svg
                </svg>
              </div>
              <span
                class="leading-tight my-auto ml-1 {{ $ratingClass ?? '' }}"
              >
                4.2
              </span>
            </div>
          </div>
        </td>
        <td>
          <div
            class="sc-AxhUy ekyfZv"
          >
            <span>
              v 1.3.8
            </span>
          </div>
        </td>
        <td>
          <div
            class="sc-AxhUy ekyfZv"
          >
            <span>
              4.2 MB
            </span>
          </div>
        </td>
        <td>
          <div
            class="sc-AxhUy ekyfZv"
          >
            <div
              class="flex w-6 h-6 mx-auto"
            >
              <div
                class="m-auto text-theme-neutral"
              >
                <div
                  class="sc-AxirZ fkjLBb"
                  height="15"
                  width="15"
                >
                  <svg>
                    dash.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </td>
        <td
          class="w-16"
        >
          <div
            class="sc-AxhUy gaxSDd justify-end"
          >
            <button
              class="sc-AxjAm fPpool"
              color="primary"
              data-testid="PluginListItem__install"
              type="button"
            >
              Install
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`PluginListItem should render grant icon 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="sc-AxgMl fRZhDw group"
        data-testid="TableRow"
      >
        <td
          class="w-20"
        >
          <div
            class="sc-AxhUy ietzKN"
          >
            <svg
              class="w-15 h-15"
            >
              changenow-logo.svg
            </svg>
          </div>
        </td>
        <td>
          <div
            class="sc-AxhUy ekyfZv space-x-2"
          >
            <a
              class="font-semibold link"
              href="/"
            >
              ARK Explorer
            </a>
            <div
              class="sc-AxirZ llyBHM"
              height="20"
              width="14"
            >
              <svg>
                grant.svg
              </svg>
            </div>
          </div>
        </td>
        <td>
          <div
            class="sc-AxhUy ekyfZv pr-16"
          >
            <span>
              ARK.io
            </span>
          </div>
        </td>
        <td>
          <div
            class="sc-AxhUy ekyfZv"
          >
            <span>
              Utility
            </span>
          </div>
        </td>
        <td>
          <div
            class="sc-AxhUy ekyfZv"
          >
            <div
              class="flex"
              data-testid="ReviewRating"
            >
              <div
                class="relative my-auto"
              >
                <div
                  class="absolute overflow-hidden"
                  style="width: 80%;"
                >
                  <svg
                    class="text-theme-warning-400 w-3"
                  >
                    star.svg
                  </svg>
                </div>
                <svg
                  class="text-theme-neutral w-3"
                >
                  star.svg
                </svg>
              </div>
              <span
                class="leading-tight my-auto ml-1 {{ $ratingClass ?? '' }}"
              >
                4.2
              </span>
            </div>
          </div>
        </td>
        <td>
          <div
            class="sc-AxhUy ekyfZv"
          >
            <span>
              v 1.3.8
            </span>
          </div>
        </td>
        <td>
          <div
            class="sc-AxhUy ekyfZv"
          >
            <span>
              4.2 MB
            </span>
          </div>
        </td>
        <td>
          <div
            class="sc-AxhUy ekyfZv"
          >
            <div
              class="flex w-6 h-6 mx-auto"
            >
              <div
                class="m-auto text-theme-neutral"
              >
                <div
                  class="sc-AxirZ fkjLBb"
                  height="15"
                  width="15"
                >
                  <svg>
                    dash.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </td>
        <td
          class="w-16"
        >
          <div
            class="sc-AxhUy gaxSDd justify-end"
          >
            <button
              class="sc-AxjAm fPpool"
              color="primary"
              data-testid="PluginListItem__install"
              type="button"
            >
              Install
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`PluginListItem should render official icon 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="sc-AxgMl fRZhDw group"
        data-testid="TableRow"
      >
        <td
          class="w-20"
        >
          <div
            class="sc-AxhUy ietzKN"
          >
            <svg
              class="w-15 h-15"
            >
              changenow-logo.svg
            </svg>
          </div>
        </td>
        <td>
          <div
            class="sc-AxhUy ekyfZv space-x-2"
          >
            <a
              class="font-semibold link"
              href="/"
            >
              ARK Explorer
            </a>
            <div
              class="sc-AxirZ iOZZCn"
              height="18"
              width="18"
            >
              <svg>
                official-ark-plugin.svg
              </svg>
            </div>
          </div>
        </td>
        <td>
          <div
            class="sc-AxhUy ekyfZv pr-16"
          >
            <span>
              ARK.io
            </span>
          </div>
        </td>
        <td>
          <div
            class="sc-AxhUy ekyfZv"
          >
            <span>
              Utility
            </span>
          </div>
        </td>
        <td>
          <div
            class="sc-AxhUy ekyfZv"
          >
            <div
              class="flex"
              data-testid="ReviewRating"
            >
              <div
                class="relative my-auto"
              >
                <div
                  class="absolute overflow-hidden"
                  style="width: 80%;"
                >
                  <svg
                    class="text-theme-warning-400 w-3"
                  >
                    star.svg
                  </svg>
                </div>
                <svg
                  class="text-theme-neutral w-3"
                >
                  star.svg
                </svg>
              </div>
              <span
                class="leading-tight my-auto ml-1 {{ $ratingClass ?? '' }}"
              >
                4.2
              </span>
            </div>
          </div>
        </td>
        <td>
          <div
            class="sc-AxhUy ekyfZv"
          >
            <span>
              v 1.3.8
            </span>
          </div>
        </td>
        <td>
          <div
            class="sc-AxhUy ekyfZv"
          >
            <span>
              4.2 MB
            </span>
          </div>
        </td>
        <td>
          <div
            class="sc-AxhUy ekyfZv"
          >
            <div
              class="flex w-6 h-6 mx-auto"
            >
              <div
                class="m-auto text-theme-neutral"
              >
                <div
                  class="sc-AxirZ fkjLBb"
                  height="15"
                  width="15"
                >
                  <svg>
                    dash.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </td>
        <td
          class="w-16"
        >
          <div
            class="sc-AxhUy gaxSDd justify-end"
          >
            <button
              class="sc-AxjAm fPpool"
              color="primary"
              data-testid="PluginListItem__install"
              type="button"
            >
              Install
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`PluginListItem should trigger delete 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="sc-AxgMl fRZhDw group"
        data-testid="TableRow"
      >
        <td
          class="w-20"
        >
          <div
            class="sc-AxhUy ietzKN"
          >
            <svg
              class="w-15 h-15"
            >
              changenow-logo.svg
            </svg>
          </div>
        </td>
        <td>
          <div
            class="sc-AxhUy ekyfZv space-x-2"
          >
            <a
              class="font-semibold link"
              href="/"
            >
              ARK Explorer
            </a>
          </div>
        </td>
        <td>
          <div
            class="sc-AxhUy ekyfZv pr-16"
          >
            <span>
              ARK.io
            </span>
          </div>
        </td>
        <td>
          <div
            class="sc-AxhUy ekyfZv"
          >
            <span>
              Utility
            </span>
          </div>
        </td>
        <td>
          <div
            class="sc-AxhUy ekyfZv"
          >
            <div
              class="flex"
              data-testid="ReviewRating"
            >
              <div
                class="relative my-auto"
              >
                <div
                  class="absolute overflow-hidden"
                  style="width: 80%;"
                >
                  <svg
                    class="text-theme-warning-400 w-3"
                  >
                    star.svg
                  </svg>
                </div>
                <svg
                  class="text-theme-neutral w-3"
                >
                  star.svg
                </svg>
              </div>
              <span
                class="leading-tight my-auto ml-1 {{ $ratingClass ?? '' }}"
              >
                4.2
              </span>
            </div>
          </div>
        </td>
        <td>
          <div
            class="sc-AxhUy ekyfZv"
          >
            <span>
              v 1.3.8
            </span>
          </div>
        </td>
        <td>
          <div
            class="sc-AxhUy ekyfZv"
          >
            <span>
              4.2 MB
            </span>
          </div>
        </td>
        <td>
          <div
            class="sc-AxhUy ekyfZv"
          >
            <div
              class="flex w-6 h-6 mx-auto border-2 rounded-full border-theme-success-200 text-theme-success-500"
            >
              <div
                class="m-auto"
              >
                <div
                  class="sc-AxirZ fkjLBb"
                  height="15"
                  width="15"
                >
                  <svg>
                    checkmark.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </td>
        <td
          class="w-16"
        >
          <div
            class="sc-AxhUy gaxSDd justify-end"
          >
            <div
              class="relative"
              data-testid="dropdown__toggle"
            >
              <button
                class="sc-AxjAm gBWztV text-left"
                color="primary"
                type="button"
              >
                <div
                  class="sc-AxirZ eEbZjj"
                  height="20"
                  width="20"
                >
                  <svg>
                    settings.svg
                  </svg>
                </div>
              </button>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`PluginListItem should trigger install 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="sc-AxgMl fRZhDw group"
        data-testid="TableRow"
      >
        <td
          class="w-20"
        >
          <div
            class="sc-AxhUy ietzKN"
          >
            <svg
              class="w-15 h-15"
            >
              changenow-logo.svg
            </svg>
          </div>
        </td>
        <td>
          <div
            class="sc-AxhUy ekyfZv space-x-2"
          >
            <a
              class="font-semibold link"
              href="/"
            >
              ARK Explorer
            </a>
          </div>
        </td>
        <td>
          <div
            class="sc-AxhUy ekyfZv pr-16"
          >
            <span>
              ARK.io
            </span>
          </div>
        </td>
        <td>
          <div
            class="sc-AxhUy ekyfZv"
          >
            <span>
              Utility
            </span>
          </div>
        </td>
        <td>
          <div
            class="sc-AxhUy ekyfZv"
          >
            <div
              class="flex"
              data-testid="ReviewRating"
            >
              <div
                class="relative my-auto"
              >
                <div
                  class="absolute overflow-hidden"
                  style="width: 80%;"
                >
                  <svg
                    class="text-theme-warning-400 w-3"
                  >
                    star.svg
                  </svg>
                </div>
                <svg
                  class="text-theme-neutral w-3"
                >
                  star.svg
                </svg>
              </div>
              <span
                class="leading-tight my-auto ml-1 {{ $ratingClass ?? '' }}"
              >
                4.2
              </span>
            </div>
          </div>
        </td>
        <td>
          <div
            class="sc-AxhUy ekyfZv"
          >
            <span>
              v 1.3.8
            </span>
          </div>
        </td>
        <td>
          <div
            class="sc-AxhUy ekyfZv"
          >
            <span>
              4.2 MB
            </span>
          </div>
        </td>
        <td>
          <div
            class="sc-AxhUy ekyfZv"
          >
            <div
              class="flex w-6 h-6 mx-auto"
            >
              <div
                class="m-auto text-theme-neutral"
              >
                <div
                  class="sc-AxirZ fkjLBb"
                  height="15"
                  width="15"
                >
                  <svg>
                    dash.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </td>
        <td
          class="w-16"
        >
          <div
            class="sc-AxhUy gaxSDd justify-end"
          >
            <button
              class="sc-AxjAm fPpool"
              color="primary"
              data-testid="PluginListItem__install"
              type="button"
            >
              Install
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;
